<resources>
    <string name="app_name">ServiceReq</string>

    <string name="emptyString"> </string>
    <string name="defaultErrorMessage">Ceva s-a întâmplat! Te rugăm încearcă din nou</string>

    <string name="login_imageDescription">Imaginea aplicației</string>
    <string name="login_loginButton">Autentificare</string>
    <string name="login_emailInputHint">email@exemplu.com</string>
    <string name="login_passwordHint">parolata123</string>
    <string name="login_emailTextView">Email</string>
    <string name="login_passwordTextView">Parolă</string>
    <string name="login_registerLink">Ai nevoie de un cont? Apasă aici!</string>
    <string name="login_invalidData">Ai introdus un email sau o parola invalidă</string>
    <string name="login_emptyPassword">Câmpul Parola nu poate fi gol</string>

    <string name="register_registerButton">Înregistrare</string>
    <string name="register_firstNameTextView">Prenume</string>
    <string name="register_firstNameHint">George</string>
    <string name="register_lastNameTextView">Nume</string>
    <string name="register_lastNameHint">Popa</string>
    <string name="register_confirmPasswordTextView">Confirmare parolă</string>
    <string name="register_backButton">Înapoi</string>
    <string name="register_invalidEmail">Adresa de email este invalidă!</string>
    <string name="register_passwordsDontMatch">Parolele introduse nu sunt la fel!</string>
    <string name="register_invalidFirstName">Prenumele este invalid!</string>
    <string name="register_invalidLastName">Numele este invalid!</string>
    <string name="register_invalidPassword">Parola trebuie să conțină cel puțin 8 caractere!</string>
    <string name="register_existing">Există un cont creat cu adresa de email specificată!</string>

    <string name="main_logoDescription">ServiceReq Logo</string>
    <string name="main_messagesDescription">Mesaje</string>
    <string name="main_searchHint">Am nevoie de cineva…</string>
    <string name="main_searchIcon">Caută</string>

    <string name="post_posterAvatar">Poster Avatar</string>
    <string name="post_posterName">Prenume Nume</string>
    <string name="post_postTime">1.02.2020</string>
    <string name="post_imageDescription">Post Image</string>
    <string name="post_solvedState">Solved state</string>
    <string name="post_description_example">Testare descriere postare</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_feed">Postări</string>
    <string name="nav_messages">Mesaje</string>
    <string name="messages_title">Mesaje</string>
    <string name="message_previewMessage">Previzualizare mesaj</string>
    <string name="your_posts">Postările tale</string>
    <string name="newpost_tv_add_a_new_post">Adaugă o postare</string>
    <string name="newpost_upload_image">Încarcă o imagine</string>
    <string name="newpost_post">Postează</string>
    <string name="newpost_category">Categorie:</string>
    <string name="newpost_post_description">Descrierea postării</string>
    <string name="newpost_image_png">imagine.png</string>
    <string name="editprofile_save">Salvează</string>
    <string name="editprofile_cancel">Anulează</string>
    <string name="editprofile_enable_helper_mode">Activează opțiunea Helper</string>
    <string name="editprofile_select_the_categories_where_you_think_you_can_help">Selectează categoriile în care poți ajuta</string>
    <string name="editprofile_edit_your_profile">Editează profilul</string>
    <string name="profile_edit_profile">Editare profil</string>
    <string name="messagepv_end">⭐⭐</string>
    <string name="raing_rate_firstname_lastname">Evaluare pentru Codrut Iftimie</string>
    <string name="rating_rate">Evaluează</string>
    <string name="rating_no_thanks">Anulează</string>
    <string name="editprofile_new_password">Parolă nouă</string>
    <string name="editprofile_confirm_new_password">Confirmare parolă</string>
    <string name="newpost_i_can_move">Mă pot deplasa</string>
    <string name="newpost_only_at_my_home">Doar acasă</string>
    <string name="profile_available">Valabil</string>
    <string name="main_add_new_post">Adaugă o postare</string>
    <string name="profile_logout">Deconectare</string>
    <string name="helper_icon_description">Helper Icon</string>
    <string name="editare_profil">Editare profil</string>
    <string name="solved_post">Solved post</string>
    <string name="locatie">Locație:</string>
    <string name="city">City</string>
</resources>
