<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="10dp"
    android:paddingEnd="15dp"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/post_posterAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@null"
            android:contentDescription="@string/post_posterAvatar"
            android:scaleType="fitXY"
            android:src="@drawable/ic_avatar_default" />

        <TextView
            android:id="@+id/post_posterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/post_posterAvatar"
            android:text="@string/post_posterName"
            android:textColor="#FFFFFF" />
        <ImageView
            android:id="@+id/post_helper"
            android:layout_width="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_height="17dp"
            android:src="@drawable/helper"
            android:contentDescription="@string/helper_icon_description"
            android:layout_toEndOf="@+id/post_posterName" />

        <TextView
            android:id="@+id/post_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_posterName"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/post_posterAvatar"
            android:text="@string/post_postTime"
            android:textColor="#AAAAAA"
            android:textSize="12sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_description_example"
            android:textColor="#FFFFFF" />

        <ImageView
            android:id="@+id/post_image"
            android:layout_below="@+id/post_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:layout_centerHorizontal="true"
            android:scaleType="fitCenter"
            android:layout_marginBottom="-10dp"
            android:contentDescription="@string/post_imageDescription"/>
    </RelativeLayout>
</LinearLayout>
