<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center">


            <ImageView
                android:id="@+id/login_image"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:contentDescription="@string/login_imageDescription"
                android:src="@drawable/logo_big_fit" />

            <TextView
                android:id="@+id/login_errorMessage"
                android:layout_marginTop="20dp"
                android:textColor="#FF0000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyString" />

            <LinearLayout
                android:id="@+id/login_emailInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/login_emailTextView"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_emailInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="20"
                    android:hint="@string/login_emailInputHint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/login_passwordInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_passwordTextView"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/login_passwordInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="20"
                    android:fontFamily="sans-serif"
                    android:hint="@string/login_passwordHint"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <Button
                android:id="@+id/login_loginButton"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="50dp"
                android:background="@android:color/holo_green_light"
                android:onClick="loginClicked"
                android:clickable="true"
                android:focusable="true"
                android:hint="@string/login_passwordHint"
                android:text="@string/login_loginButton" />

            <TextView
                android:id="@+id/login_registerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:onClick="registerClicked"
                android:text="@string/login_registerLink"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
