<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp"
    android:background="@color/colorBackground">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/messagepv_receiverAvatar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@null"
            android:contentDescription="@string/post_posterAvatar"
            android:scaleType="fitXY"
            android:src="@drawable/ic_avatar_default" />

        <TextView
            android:id="@+id/messagepv_receiverName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/messagepv_receiverAvatar"
            android:text="@string/post_posterName"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/messagepv_msgPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messagepv_receiverName"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/messagepv_receiverAvatar"
            android:text="@string/message_previewMessage"
            android:textColor="#DDDDDD"
            android:textSize="16sp" />
        <Button
            android:id="@+id/messagepv_endButton"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="40dp"
            android:layout_height="25dp"
            android:background="@color/colorAccent"
            android:text="@string/messagepv_end"/>
    </RelativeLayout>

</LinearLayout>