<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444444">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/register_errorMessage"
                android:layout_marginBottom="10dp"
                android:textColor="#FF0000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/emptyString" />

            <LinearLayout
                android:id="@+id/register_emailInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_emailTextView"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_emailInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="20"
                    android:hint="@string/login_emailInputHint"
                    android:inputType="textEmailAddress"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_firstNameInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_firstNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_firstNameTextView"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_firstNameInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="20"
                    android:hint="@string/register_firstNameHint"
                    android:inputType="textPersonName"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_lastNameInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_lastNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_lastNameTextView"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_lastNameInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="20"
                    android:hint="@string/register_lastNameHint"
                    android:inputType="textPersonName"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_passwordInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_passwordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_passwordTextView"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_passwordInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="20"
                    android:fontFamily="sans-serif"
                    android:hint="@string/login_passwordHint"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/register_cPasswordInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/register_cPasswordTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_confirmPasswordTextView"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/register_cPasswordInput"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorAccent"
                    android:ems="20"
                    android:fontFamily="sans-serif"
                    android:hint="@string/login_passwordHint"
                    android:inputType="textPassword"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:textColor="@color/colorPrimary"
                    android:textColorHint="@color/colorHint" />
            </LinearLayout>

            <Button
                android:id="@+id/register_registerButton"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/holo_green_light"
                android:onClick="registerButtonClicked"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register_registerButton" />

            <TextView
                android:id="@+id/register_goBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="registerGoBackClicked"
                android:text="@string/register_backButton"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>